crates/ttrpg_checker/tests/snapshots/snapshot_diagnostics__undefined_variable.snap
---
source: crates/ttrpg_checker/tests/snapshot_diagnostics.rs
expression: render_errors(source)
---
error: undefined variable `y`
  --> line 3:33
  |
3 |     derive foo(x: int) -> int { y }
  |                                 ^
